[tool.poetry]
name = "unfollower"
version = "0.1.0"
description = ""
authors = ["b3ella <goliveirapk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
instagram-private-api = {git = "https://git@github.com/ping/instagram_private_api.git", rev = "1.6.0"}
Flask = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
